--- a/src/fe/styles/index.css
+++ b/src/fe/styles/index.css
@@ -32,8 +32,10 @@
 }
 .app .show-face-wrapper .show-face .face .real-face {
   position: absolute;
-  left: 114px;
-  top: 90px;
+  left: 2px;
+  top: -1px;
+  width: 509px;
+  height: 431px;
 }
 .app .show-face-wrapper .show-face .face .face-mask {
   position: absolute;
