--- a/src/fe/styles/index.scss
+++ b/src/fe/styles/index.scss
@@ -37,8 +37,10 @@ color: white;
 
       .real-face{
             position: absolute;
-    left: 114px;
-    top: 90px;
+        left: 2px;
+    top: -1px;
+        width: 509px;
+    height: 431px;
       }
 
       .face-mask{
