--- a/src/fe/styles/index.css
+++ b/src/fe/styles/index.css
@@ -3,9 +3,9 @@ body {
 }
 
 .app {
-  width: 1078px;
-  height: 1918px;
-  background-image: url(images/bg.png);
+  width: 1920px;
+  height: 1080px;
+  background-image: url(images/bg.jpg);
   background-repeat: no-repeat;
   margin: auto;
   color: white;
@@ -14,15 +14,16 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.app .show-face-wrapper {
-  width: 527px;
-}
-.app .show-face-wrapper .title {
+.app .title {
   height: 120px;
   font-size: 34px;
+  width: 630px;
 }
-.app .show-face-wrapper .title .img {
+.app .title .img {
   vertical-align: text-bottom;
+}
+.app .show-face-wrapper {
+  width: 527px;
 }
 .app .show-face-wrapper .show-face {
   height: 740px;
