--- a/src/fe/styles/index.scss
+++ b/src/fe/styles/index.scss
@@ -31,12 +31,13 @@ color: white;
 
 
 .show-face-wrapper{
-  width: 527px;
+  width: 420px;
 
 
 
   .show-face{
-    height: 740px;
+    display: inline-block;
+    height: 590px;
     background-color: #092f49;
 
     padding-top: 22px;
