--- a/src/fe/styles/index.css
+++ b/src/fe/styles/index.css
@@ -23,10 +23,11 @@ body {
   vertical-align: text-bottom;
 }
 .app .show-face-wrapper {
-  width: 527px;
+  /* width: 420px; */
 }
 .app .show-face-wrapper .show-face {
-  height: 740px;
+  display: inline-block;
+  height: 590px;
   background-color: #092f49;
   padding-top: 22px;
 }
