--- a/src/fe/styles/index.css
+++ b/src/fe/styles/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0px; }
+  margin: 0px;
+}
 
 .app {
   width: 1920px;
@@ -7,71 +8,90 @@ body {
   background-image: url(images/bg.jpg);
   background-repeat: no-repeat;
   margin: auto;
-  color: white; }
+  color: white;
+}
 .app .center {
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+}
 .app .title {
   height: 120px;
   font-size: 34px;
-  width: 630px; }
+  width: 630px;
+}
 .app .title .img {
-  vertical-align: text-bottom; }
+  vertical-align: text-bottom;
+}
 .app .show-face-wrapper {
-  width: 1600px; }
+  width: 1600px;
+}
 .app .show-face-wrapper .show-face {
   display: inline-block;
   height: 590px;
   width: 417px;
   background-color: #092f49;
-  padding-top: 22px; }
+  padding-top: 22px;
+}
 .app .show-face-wrapper .show-face .face {
   height: 413px;
   width: 100%;
-  position: relative; }
+  position: relative;
+}
 .app .show-face-wrapper .show-face .face .real-face {
   position: absolute;
   left: 2px;
   top: 0px;
   width: 415px;
-  height: 391px; }
+  height: 391px;
+}
 .app .show-face-wrapper .show-face .face .face-mask {
   position: absolute;
   left: 0px;
-  top: 0px; }
+  top: 0px;
+}
 .app .show-face-wrapper .show-face .face .marker-circle {
   position: absolute;
   top: 367px;
   left: 183px;
-  height: 50px; }
+  height: 50px;
+}
 .app .show-face-wrapper .show-face .tip .icon {
   height: 90px;
   background-image: url(images/title02.png);
   background-repeat: no-repeat;
-  background-position-x: center; }
+  background-position-x: center;
+}
 .app .show-face-wrapper .show-face .tip .text {
   color: white;
   font-size: 50px;
-  text-align: center; }
-.app .face-list {
-  margin-top: 44px; }
-.app .face-list .content {
-  display: inline-block;
   text-align: center;
-  border-spacing: 19px;
-  margin-bottom: 58px; }
+}
+.app .face-list {
+  margin-top: 134px;
+}
+.app .face-list .content {
+  text-align: center;
+  width: 100%;
+}
 .app .face-list .content .item {
-  display: inline-block; }
+  display: inline-block;
+}
 .app .face-list .content .item .img {
   width: 117px;
-  height: 114px; }
+  height: 114px;
+}
 .app .face-list .content .item .time {
-  height: 22px; }
-.app .face-list .videoObject {
-  margin-left: 22px; }
+  height: 22px;
+}
+.app .face-list .content .videoWrapper {
+  width: 98%;
+  height: 193px;
+  text-align: right;
+}
 .app .video {
   text-align: right;
   margin-top: 81px;
-  margin-right: 10px; }
+  margin-right: 10px;
+}
 
 /*# sourceMappingURL=index.css.map */
