--- a/src/fe/styles/index.scss
+++ b/src/fe/styles/index.scss
@@ -111,6 +111,7 @@ body{
 
       .item{
         display: inline-block;
+        height: 200px;
         .img{
           width: 117px;
           height: 114px;
